# actix-rust-library

./: Cargo.toml  diesel.toml  readme.md
migrations/2024-11-19-035902_auth/: down.sql  up.sql
migrations/2024-11-19-035915_users/: up.sql
migrations/2024-11-25-143057_create_books/: down.sql  up.sql
migrations/2024-11-25-143104_create_authors/: up.sql
migrations/2024-11-25-143126_create_transaction_library/: down.sql  up.sql
migrations/2024-11-25-144604_create_categories/: up.sql
migrations/2024-11-25-150409_create_transaction_logs/: down.sql  up.sql
migrations/2024-11-26-010454_create_favorites/: down.sql  up.sql
src/: main.rs
src/config/: config.rs  mod.rs
src/controllers/: auth.rs  category.rs  user.rs
src/core/: mod.rs
src/core/commands/: create_categories.rs  mod.rs  register_user.rs  update_categories.rs
src/core/entities/: auth.rs  categories.rs  user.rs
src/core/queries/: health_queries.rs  login_queries.rs  mod.rs  user_queries.rs
src/handlers/: auth_handlers.rs  category_handlers.rs  health_handlers.rs  mod.rs  user_handlers.rs
src/infrastructure/db/: connection.rs  library.db  mod.rs
src/infrastructure/repositories/: auth_repository.rs  category_repository.rs  mod.rs  user_repository.rs
src/infrastructure/schema/: schema.rs
src/services/: category_service.rs  mod.rs  user_service.rs
src/utils/: auth_middleware.rs  cors.rs  errors.rs  jwt.rs  jwt_guard.rs  logger.rs  mod copy.rs  mod.rs  not_found.rs  response.rs  validation_error.rs
